# rust_learning

./: .gitignore
2025/0_a_hello_world_ascii/src/: main.rs
2025/0_b_hello_world_utf8/src/: main.rs
2025/0_hello_world/src/: main.rs
2025/1_number_guessing/: Cargo.toml
2025/1_number_guessing/src/: main.rs
2025/2_b_bst_generic/src/: lib.rs  main.rs
2025/2_bst/: Cargo.toml
2025/2_bst/src/: lib.rs  main.rs
bst/: Cargo.toml
bst/src/: lib.rs
error_handling_playground/: Cargo.toml
error_handling_playground/src/: main.rs
firestore/: Cargo.toml
firestore/src/: main.rs
leetcode/max_number_of_equal_rows_1072/: Cargo.toml
leetcode/max_number_of_equal_rows_1072/src/: main.rs
leetcode/remove_dups/: Cargo.toml
leetcode/remove_dups/src/: main.rs
leetcode/shortest_subarray/: Cargo.toml  README.md
leetcode/shortest_subarray/src/: main.rs
leetcode/simple_alloc/: Cargo.toml
mandelbrotian_random_walk/: Cargo.toml
mandelbrotian_random_walk/src/: main.rs
my_bq/: Cargo.toml
my_bq/my_bq_proc/: Cargo.toml
my_bq/my_bq_proc/src/: lib.rs
my_bq/src/: client.rs  error.rs  lib.rs  main.rs
my_bq/src/structs/: error_proto.rs  job.rs  job_configuration.rs  job_configuration_query.rs  job_query_results.rs  job_reference.rs  job_status.rs  mod.rs  query_results.rs  row_field.rs  table_field_schema.rs  table_row.rs  table_schema.rs
my_gz/: Cargo.toml
my_gz/src/: main.rs
normalize/: Cargo.toml
normalize/src/: main.rs
palindrome/src/: main.rs
shad/: Cargo.toml
simple_numbers/: main.cpp
simple_numbers/src/: main.rs
swap/src/: main.rs
(+2 files in other folders)
