[package]
name = "my_bq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
yup-oauth2 = "7.0.1"
thiserror = "1.0.31"
serde = "1.0.139"
serde_json = "1.0.82"
anyhow = "1.0.58"